sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort() {
  var tab= 
  var fin=true
  var i=0
  while (fin) {
    for (i<- 0 to getNombreValeurs()-2){
      fin=true
    	if (plusPetit(i,i+1)) {
      	echange (i,i+1)
      	i=i+1
      	fin=false
    	}
    }
    
  }
}